# llm-intense-02

./: .cursorrules  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  audio_processor.py  config.py  database.py  docker-compose.yml  handlers.py  image_processor.py  ingredient_intelligence.py  llm_client.py  main.py  pyproject.toml  run.ps1  surprise_verification.py  tatus --porcelain  test_surprise_verification.py
CrazyChef_Michlan_recipe_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
doc/: conventions.md  deployment_railway.md  documentation.md  product_idea.md  tasklist.md  vision.md  workflow.md
doc/guides/: create_telegram_bot.md
funny_recipe_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_database.py
