[project]
name = "CrazyChef_Michlan-recipe-bot"
version = "0.1.0"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[tool.setuptools]
py-modules = ["main", "config", "handlers", "llm_client"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
